# gcn-email-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml
gcn_email/: __init__.py  cli.py  core.py  helpers.py  metrics.py
gcn_email_service/: __init__.py  core.py  helpers.py
