[tool.poetry]
name = "gcn-email"
version = "0.1.0"
description = "Kafka to email notification service"
license = "NASA-1.3"
authors = ["Dakota Dutko <dakota.c.dutko@nasa.gov>", "Leo Singer <leo.singer@ligo.org>"]

[tool.poetry.dependencies]
backoff = "*"
boto3 = "*"
gcn-kafka = "^0.2.3"
python = "^3.9"
ratelimit = "*"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "*"

[tool.poetry.scripts]
gcn-email = "gcn_email:main"

[tool.coverage.run]
source = [
    "gcn_email"
]
omit = [
    "*/test/*"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
